--- a/style.css
+++ b/style.css
@@ -305,6 +305,42 @@ section{
     background: rgb(250, 250, 250);
 }
 
+/* skills */
+
+#skill{
+    position: relative;
+}
+
+.skills-sub-title{
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+article{
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+    cursor: default;
+}
+
+article .Icon{
+    cursor: default;
+}
+
+/* project */
+
 .project-img{
     border: 2rem;
     width: 90%;
@@ -323,4 +359,56 @@ section{
 
 #projects{
     position: relative;
+}
+
+/* contact */
+
+#contact{
+    position: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor: default;
+    /* height: 2.5rem; */
+}
+
+.email-icon{
+    height: 2.5rem;
+}
+
+/* footer */
+
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p{
+    text-align: center;
 }
