--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -6,6 +6,10 @@
     .about-container{
         flex-wrap: wrap;
     }
+    #contact,
+    #projects {
+        height: fit-content;
+    }
 }
 
 @media screen and (max-width: 1200px) {
